mysql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-deploy
  labels:
    name: mysql-deploy
    app: demo-web-app
  namespace: database
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mysql-pod
      app: demo-web-app

  template:
    metadata:
      name: mysql-pod
      labels:
        name: mysql-pod
        app: demo-web-app
    spec:
      containers:
        - name: mysql-db
          image: mysql
          ports:
            - containerPort: 3306
