mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    name: mysql-service
    app: demo-web-app
  namespace: database
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    name: mysql-pod
    app: demo-web-app
