web_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: development
spec:
  selector:
    name: django-app-pod
    app: demo-web-app
  ports:
    - port: 5000
      targetPort: 8000
